Binding Data Chart

--- a/geomap_indo2/webapp/manifest.json
+++ b/geomap_indo2/webapp/manifest.json
@@ -54,7 +54,10 @@
     "flexEnabled": true,
     "dependencies": {
       "minUI5Version": "1.84.50",
-      "libs": {}
+      "libs": {
+        "sap.suite.ui.microchart": {},
+        "sap.ui.layout": {}
+      }
     },
     "contentDensities": {
       "compact": true,
