Major Updates - Add & Fix Vizframe Chart

--- a/geomap_indo/webapp/manifest.json
+++ b/geomap_indo/webapp/manifest.json
@@ -56,7 +56,8 @@
         "sap.ui.generic.app": {},
         "sap.ui.table": {},
         "sap.ui.vbm": {},
-        "sap.ushell": {}
+        "sap.ushell": {},
+        "sap.viz": {}
       }
     },
     "contentDensities": {
